css/style.css
/* ... */
#researchStationSupplyContainer .researchStation
{
	display: inline-block;
	width: 20%;
	margin-left: 5%;
	margin-top: -2px;
}
#researchStationSupplyCount
{
	display: inline-block;
	color: #fff;
	font-size: 18px;
	margin-left: 31.5%;
}

.noGlow { transition: filter 0.3s }
.smallGlow,
.mediumGlow,
.bigGlow
{ transition: filter 0.5s }
.noGlow { filter: drop-shadow(0px 0px -1px #fff) }
.smallGlow { filter: drop-shadow(0px 0px 2px #fff) }
.mediumGlow { filter: drop-shadow(0px 0px 6px #fff) }
.bigGlow { filter: drop-shadow(0px 0px 10px #fff) }

.warning-mild-bigGlow { filter: drop-shadow(0px 0px 6px yellow) }
.warning-mild-smallGlow { filter: drop-shadow(0px 0px 2px yellow) }
.warning-mild-bigGlow,
.warning-mild-smallGlow
{ transition: filter 1s }
.warning-moderate-bigGlow { filter: drop-shadow(0px 0px 8px orange) }
.warning-moderate-smallGlow { filter: drop-shadow(0px 0px 3px orange) }
.warning-moderate-bigGlow,
.warning-moderate-smallGlow
{ transition: filter .5s }
.warning-critical-bigGlow { filter: drop-shadow(0px 0px 10px red) }
.warning-critical-smallGlow { filter: drop-shadow(0px 0px 4px red) }
.warning-critical-bigGlow,
.warning-critical-smallGlow
{ transition: filter .25s }

#playerDeckContainer
{
	width: 14%;
	left: 68%;
	z-index: 8;
}
#playerDeckContainer img
{
	width: 40%;
	margin: 2% 30%;
}
#playerDiscardContainer
{
	width: 18%;
	left: 82%;
	z-index: 7;
}
#removedPlayerCards
{
	border-top: 1px solid #fff;
	margin-top: 10px;
}
#topPanel
{
	width: 36%;
	left: 44%;
	overflow-y: hidden;
}
#topPanel > div
{
	padding-bottom: 2px;
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
#topPanel .title, #infectionDiscardContainer .title, .bottomPanelDiv .title
{
	font-size: 13px;
	text-align: center;
	padding-top: 3px;
	border-bottom: 1px solid #fff;
}
#cubeSupplies { width: 56% }
#topPanel .info,
.bottomPanelDiv .info
{
	font-size: 11px;
	line-height: 13px;
	vertical-align: text-top;
}
.cubeSupply
{
	display: inline-block;
	width: 25%;
}

.cubeSupply p, #researchStationSupplyCount
{
	font-family: 'B612 Mono', monospace;
}
.cubeSupply p
{
	font-size: 15px;
	text-align: center;
	margin-top: -3px;
}
.cubeSupply .diseaseCube
{
	width: 64%;
	margin: 0 18%;
}
#infectionDeckContainer { width: 44% }
#infectionDeckContainer img
{
	position: relative;
	z-index: 4;
	width: 36%;
	border-radius: 100%;
	margin: 1.5% 32% 0.5% 32%;
}
#infectionDiscardContainer
{
	position: absolute;
	left: 80%;
	width: 20%;
	background-color: var(--dark-grey-background);
	border-left: 1px solid #fff;
	border-bottom: 1px solid #fff;
	overflow: hidden;
	z-index: 9;
}
#removedInfectionCards
{
	margin-top: 10px;
	border-top: 1px solid #fff;
}

#infDiscardVeil
{
	position: absolute;
	background-color: var(--dark-grey-background);
	z-index: 10;
}
.infDiscardCardback, .forecastCardback
{
	position: absolute;
	width: 10.6%;
	opacity: 0.1;
}
.drawnInfectionCard, .infDiscardCardback, .forecastCardback { pointer-events: none }
.drawnInfectionCard, .drawnPlayerCard { position: absolute }
.drawnPlayerCard { z-index: 2 }
.marker { position: absolute }
.marker > img { width: 100% }
#infectionRateMarker
{
	top: 18.4%;
	left: 63.96%;
	width: 3.15%;
}
.infectionRateHighlight, .outbreaksHighlight
{
	position: absolute;
	background-color: #000;
	z-index: 10;
	opacity: 0.5;
}
.infectionRateHighlight.top
{
	width: 100%;
	height: 17.8%;
}
.infectionRateHighlight.right
{
	top: 17.8%;
	height: 9.6%;
	left: 89.5%;
	width: 10.5%;
}
.infectionRateHighlight.left
{
	top: 17.8%;
	height: 9.6%;
	width: 63.6%;
}
.infectionRateHighlight.bottom
{
	width: 100%;
	top: 27.4%;
	height: 72.6%;
}
#outbreaksMarker
{
	top: 54.4%;
	left: 2.8%;
	width: 3%;
}
#outbreaksMarker img { transform: rotate(45deg) }
.outbreaksHighlight.top
{
	width: 100%;
	height: 50.4%;
}
.outbreaksHighlight.right
{
	top: 50.4%;
	height: 49.6%;
	left: 10.3%;
	width: 89.7%;
}
.outbreaksHighlight.bottom
{
	top: 95%;
	height: 5%;
	width: 10.3%;
}
#outbreaksTrackHighlight
{
	position: absolute;
	z-index: 10;
	background-color: #8a181a;
	top: 50.4%;
	width: 10.3%;
	height: 44.6%;
}

#rightPanel,
#sideMenu,
#sideMenuTitle,
.infectionCardContents
{ width: 19.5% }
#rightPanel
{
	float: right;
	border-left: 1px solid #fff;
}
#rightPanel .tooltip
{ max-width: 180px }
.scrollable { overflow-y: scroll }
#indicatorContainer
{
	padding: 1px 0;
	background-color: #353535;
	border: none;
	overflow: hidden;
}
#indicatorContainer span:not(.roleTag, .disabled) {margin-left: 15px;}
#indicatorContainer
{
	text-align: center;
}
#indicatorContainer > * { margin-bottom: 1px }
#roleIndicator
{
	font-weight: 700;
	font-size: 16px;
	padding-bottom: 2px;
}
#stepIndicator { font-size: 14px }
#stepIndicator .info
{
	font-size: 11px;
	float: left;
	margin-left: 5px;
}
#stepIndicator .info + span { margin-left: -14px }
#stepIndicator .eventCardInfo { font-size: 12px }
#roleIndicator,
.playerPanel .role
{ font-family: 'Oswald', 'Electrolize', sans-serif }

.action:not(.step), .destination
{
	display: block;
	padding: 5px;
	border: 1px solid #4ec6e1;
	border-top: none;
}
.infectionStatus
{
	padding: 5px 0;
	text-align: center;
	background-color: var(--dark-grey-background);
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
.infectionStatus p:first-of-type{font-size: 22px;}
.groupInfRate
{
	display: inline-block;
	width: 100%;
	margin: 8px 0;
	padding: 0;
}
.infectionCard
{
	width: 100%;
	margin-bottom: 5px;
}
#infectCitiesContainer > .infectionCard,
#infectCitiesContainer > .btnContinue
{ margin-top: 20px }
.infectionCardContents { position: relative }
.infectionCard *
{
	position: absolute;
	pointer-events: none;
}
.infectionCardImg
{
	width: 100%;
}
.cityName
{
	margin-left: 20%;
	color: #000;
	font-family: 'Audiowide', 'Electrolize', sans-serif;
	font-weight: 700;
}
.veil
{
	width: 89.52%;
	left: 10.48%;
	z-index: 5;
	margin-top: -2px;
}
#infectionDiscardContainer .infectionCard
{
	display: block;
	padding-left: 1%;
	width: 100%;
	margin-top: 2px;
}
/* ... */

